[2 24] update cwiczenie2_pandas.ipynb

--- a/cwiczenie2_pandas.ipynb
+++ b/cwiczenie2_pandas.ipynb
@@ -5659,10 +5659,13 @@
    "id": "2939c9e66ce344e1"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T11:32:29.447748Z",
+     "start_time": "2025-11-18T11:32:28.408525Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import requests\n",
     "import pandas as pd\n",
@@ -5679,12 +5682,141 @@
     "resp.raise_for_status()           # podniesie wyjątek, jeśli np. 403/404\n",
     "\n",
     "html = StringIO(resp.text) # wymagane dla nowszych wersji Pandas\n",
-    "tables = pd.read_html(html)  # lista DataFrame’ów z tabeli na stronie\n",
+    "tables = pd.read_html(html)  # lista DataFrame’ów z tabeli na stronie\n"
+   ],
+   "id": "4f081fd611c81946",
+   "outputs": [],
+   "execution_count": 74
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T11:33:27.537741Z",
+     "start_time": "2025-11-18T11:33:27.531619Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
     "print(len(tables))\n",
     "df = tables[0]                    # np. pierwsza tabela\n",
     "print(df.head())"
    ],
-   "id": "4f081fd611c81946"
+   "id": "b256c5624198ff66",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n",
+      "                                                   0\n",
+      "0                                Part of a series on\n",
+      "1                                 Sustainable energy\n",
+      "2  Energy conservation Arcology Building insulati...\n",
+      "3  Renewable energy Biofuel Sustainable Biogas Bi...\n",
+      "4  Sustainable transport Green vehicle Electric v...\n"
+     ]
+    }
+   ],
+   "execution_count": 75
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T11:34:12.392043Z",
+     "start_time": "2025-11-18T11:34:12.382860Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tables[1]",
+   "id": "2abea90418691ebf",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                 Wind farm  Capacity (MW)        Country  Refs\n",
+       "0          Gansu Wind Farm           7965          China  [21]\n",
+       "1      Muppandal Wind Farm           1500          India  [22]\n",
+       "2  Alta (Oak Creek-Mojave)           1320  United States  [23]\n",
+       "3      Jaisalmer Wind Park           1064          India  [24]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wind farm</th>\n",
+       "      <th>Capacity (MW)</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Refs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Gansu Wind Farm</td>\n",
+       "      <td>7965</td>\n",
+       "      <td>China</td>\n",
+       "      <td>[21]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Muppandal Wind Farm</td>\n",
+       "      <td>1500</td>\n",
+       "      <td>India</td>\n",
+       "      <td>[22]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Alta (Oak Creek-Mojave)</td>\n",
+       "      <td>1320</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>[23]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Jaisalmer Wind Park</td>\n",
+       "      <td>1064</td>\n",
+       "      <td>India</td>\n",
+       "      <td>[24]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 76
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T11:36:45.597008Z",
+     "start_time": "2025-11-18T11:36:45.562073Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tables[1].to_csv(\"tabela_wind_power.csv\")",
+   "id": "f4e1e1430b48f70c",
+   "outputs": [],
+   "execution_count": 77
   }
  ],
  "metadata": {
