[2 27] update cwiczenie2_pandas.ipynb

--- a/cwiczenie4.ipynb
+++ b/cwiczenie4.ipynb
@@ -1030,6 +1030,497 @@
     }
    ],
    "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Kwantyle\n",
+    "wartośści odstające IQR"
+   ],
+   "id": "4c2fba953a8faf83"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:08:11.967401Z",
+     "start_time": "2025-11-18T12:08:11.961085Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "Q1 = df['score'].quantile(0.25)\n",
+    "Q3 = df['score'].quantile(0.75)"
+   ],
+   "id": "8edba946d780f495",
+   "outputs": [],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:08:39.031300Z",
+     "start_time": "2025-11-18T12:08:39.025912Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "IQR = Q3 - Q1\n",
+    "IQR"
+   ],
+   "id": "aef171effef9d75",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(9.0)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:09:51.301664Z",
+     "start_time": "2025-11-18T12:09:51.293839Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "outliers = df[df['score'] > Q3 + 1.5 * IQR]\n",
+    "outliers"
+   ],
+   "id": "35e2af91f114d307",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [order_id, customer_id, product, category, price, quantity, score, country, order_date]\n",
+       "Index: []"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>score</th>\n",
+       "      <th>country</th>\n",
+       "      <th>order_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:11:07.992399Z",
+     "start_time": "2025-11-18T12:11:07.976912Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "median_score = df['score'].median()\n",
+    "df.loc[df['score'] > Q3 + 1.5 * IQR, 'score'] = median_score\n",
+    "df"
+   ],
+   "id": "4c77bc800b544c7b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   order_id customer_id     product     category   price  quantity  score  \\\n",
+       "0      1001         C01      Laptop  Electronics  3500.0         1   95.0   \n",
+       "1      1002         C02       Mouse  Accessories   120.0         2   89.0   \n",
+       "2      1003         C03  Smartphone  Electronics  1030.8         1   80.0   \n",
+       "3      1004         C04  Headphones  Accessories   450.0         1   89.0   \n",
+       "4      1005         C01     Monitor  Electronics   999.0         2   30.0   \n",
+       "5      1006         C05  Power Bank  Accessories    85.0         3   92.0   \n",
+       "\n",
+       "   country  order_date  \n",
+       "0   Poland  2024-03-01  \n",
+       "1  Germany  2024-03-03  \n",
+       "2   Poland  2024-03-07  \n",
+       "3   France  2024-03-08  \n",
+       "4   Poland  2024-03-10  \n",
+       "5  Czechia  2024-03-12  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>score</th>\n",
+       "      <th>country</th>\n",
+       "      <th>order_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>C02</td>\n",
+       "      <td>Mouse</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>C03</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>1030.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>C04</td>\n",
+       "      <td>Headphones</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>France</td>\n",
+       "      <td>2024-03-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>Monitor</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1006</td>\n",
+       "      <td>C05</td>\n",
+       "      <td>Power Bank</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>Czechia</td>\n",
+       "      <td>2024-03-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 20
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Posortowac wg order_date",
+   "id": "ddf7205bee977a2d"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:13:11.226109Z",
+     "start_time": "2025-11-18T12:13:11.212681Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.sort_values(by=\"order_date\")",
+   "id": "34ef6674f6a00096",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   order_id customer_id     product     category   price  quantity  score  \\\n",
+       "0      1001         C01      Laptop  Electronics  3500.0         1   95.0   \n",
+       "1      1002         C02       Mouse  Accessories   120.0         2   89.0   \n",
+       "2      1003         C03  Smartphone  Electronics  1030.8         1   80.0   \n",
+       "3      1004         C04  Headphones  Accessories   450.0         1   89.0   \n",
+       "4      1005         C01     Monitor  Electronics   999.0         2   30.0   \n",
+       "5      1006         C05  Power Bank  Accessories    85.0         3   92.0   \n",
+       "\n",
+       "   country  order_date  \n",
+       "0   Poland  2024-03-01  \n",
+       "1  Germany  2024-03-03  \n",
+       "2   Poland  2024-03-07  \n",
+       "3   France  2024-03-08  \n",
+       "4   Poland  2024-03-10  \n",
+       "5  Czechia  2024-03-12  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>score</th>\n",
+       "      <th>country</th>\n",
+       "      <th>order_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>C02</td>\n",
+       "      <td>Mouse</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>2024-03-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>C03</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>1030.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>C04</td>\n",
+       "      <td>Headphones</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>France</td>\n",
+       "      <td>2024-03-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>Monitor</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1006</td>\n",
+       "      <td>C05</td>\n",
+       "      <td>Power Bank</td>\n",
+       "      <td>Accessories</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>Czechia</td>\n",
+       "      <td>2024-03-12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 21
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:14:50.148736Z",
+     "start_time": "2025-11-18T12:14:50.129163Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df[(df['country'] == \"Poland\") & (df['score'] > 85)]",
+   "id": "dd422a6de338e3a3",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   order_id customer_id product     category   price  quantity  score country  \\\n",
+       "0      1001         C01  Laptop  Electronics  3500.0         1   95.0  Poland   \n",
+       "\n",
+       "   order_date  \n",
+       "0  2024-03-01  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>score</th>\n",
+       "      <th>country</th>\n",
+       "      <th>order_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 22
   }
  ],
  "metadata": {
