[2 28] update cwiczeni.ipynb

--- a/cwiczenie4.ipynb
+++ b/cwiczenie4.ipynb
@@ -1521,6 +1521,95 @@
     }
    ],
    "execution_count": 22
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:16:35.189483Z",
+     "start_time": "2025-11-18T12:16:35.166894Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.query(\"category == 'Electronics' and price > 1000\")",
+   "id": "7ca66a5ab41307df",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   order_id customer_id     product     category   price  quantity  score  \\\n",
+       "0      1001         C01      Laptop  Electronics  3500.0         1   95.0   \n",
+       "2      1003         C03  Smartphone  Electronics  1030.8         1   80.0   \n",
+       "\n",
+       "  country  order_date  \n",
+       "0  Poland  2024-03-01  \n",
+       "2  Poland  2024-03-07  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>product</th>\n",
+       "      <th>category</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>score</th>\n",
+       "      <th>country</th>\n",
+       "      <th>order_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>Laptop</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>3500.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>C03</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>1030.8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>Poland</td>\n",
+       "      <td>2024-03-07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
   }
  ],
  "metadata": {
