--- a/cwiczenie4.ipynb
+++ b/cwiczenie4.ipynb
@@ -1752,6 +1752,219 @@
     }
    ],
    "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:22:22.068705Z",
+     "start_time": "2025-11-18T12:22:22.056865Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.pivot_table(values=\"price\", index=\"country\", aggfunc=\"mean\")",
+   "id": "d40c48836b725175",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "               price\n",
+       "country             \n",
+       "Czechia    85.000000\n",
+       "France    450.000000\n",
+       "Germany   120.000000\n",
+       "Poland   1843.266667"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Czechia</th>\n",
+       "      <td>85.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>France</th>\n",
+       "      <td>450.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Germany</th>\n",
+       "      <td>120.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Poland</th>\n",
+       "      <td>1843.266667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 26
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "za pomoca groupby()",
+   "id": "8c7eb717f98192fd"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:25:24.724892Z",
+     "start_time": "2025-11-18T12:25:24.715320Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "df.groupby('country')['price'].mean()",
+   "id": "65029563c004281",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "country\n",
+       "Czechia      85.000000\n",
+       "France      450.000000\n",
+       "Germany     120.000000\n",
+       "Poland     1843.266667\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:25:54.787272Z",
+     "start_time": "2025-11-18T12:25:54.772204Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "dane = df.groupby('category').agg({\"order_id\": \"count\", \"score\":'mean'})\n",
+    "dane"
+   ],
+   "id": "6dbecc964a5c5ff7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "             order_id      score\n",
+       "category                        \n",
+       "Accessories         3  90.000000\n",
+       "Electronics         3  68.333333"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accessories</th>\n",
+       "      <td>3</td>\n",
+       "      <td>90.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Electronics</th>\n",
+       "      <td>3</td>\n",
+       "      <td>68.333333</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:26:13.427470Z",
+     "start_time": "2025-11-18T12:26:13.419989Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "dane.info()",
+   "id": "df39da15ff86b3c8",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 2 entries, Accessories to Electronics\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column    Non-Null Count  Dtype  \n",
+      "---  ------    --------------  -----  \n",
+      " 0   order_id  2 non-null      int64  \n",
+      " 1   score     2 non-null      float64\n",
+      "dtypes: float64(1), int64(1)\n",
+      "memory usage: 48.0+ bytes\n"
+     ]
+    }
+   ],
+   "execution_count": 29
   }
  ],
  "metadata": {
