[2 35] update cwiczenie4.ipynb.ipynb

--- a/cwiczenie5.ipynb
+++ b/cwiczenie5.ipynb
@@ -523,7 +523,7 @@
     "x = np.random.normal(50, 10, 100)\n",
     "y = 2 * x + np.random.normal(0, 10, 100)\n",
     "\n",
-    "plt.scatter(x,y)"
+    "plt.scatter(x, y)"
    ],
    "id": "bb9964dc7fbf8148",
    "outputs": [
@@ -562,7 +562,7 @@
    },
    "cell_type": "code",
    "source": [
-    "df = pd.DataFrame({\"x\":x, \"y\":y})\n",
+    "df = pd.DataFrame({\"x\": x, \"y\": y})\n",
     "\n",
     "sns.regplot(x=\"x\", y=\"y\", data=df, color=\"green\")\n",
     "plt.show()"
@@ -584,6 +584,144 @@
     }
    ],
    "execution_count": 24
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "-----",
+   "id": "70002fbc54c247c"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:55:55.427462Z",
+     "start_time": "2025-11-18T12:55:55.423748Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "np.random.seed(0)",
+   "id": "d69198852eae87ef",
+   "outputs": [],
+   "execution_count": 25
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:56:38.265229Z",
+     "start_time": "2025-11-18T12:56:38.261628Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = np.random.normal(50, 8, 100)\n",
+    "x_out = np.concatenate([x, [200, 220]])"
+   ],
+   "id": "bc05b21d770aefcb",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:57:02.201100Z",
+     "start_time": "2025-11-18T12:57:02.189280Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "s = pd.Series(x)",
+   "id": "af3f220a5f5f6f7d",
+   "outputs": [],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:57:07.965574Z",
+     "start_time": "2025-11-18T12:57:07.959694Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "s.head()",
+   "id": "6f34764b23fd07b9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    64.112419\n",
+       "1    53.201258\n",
+       "2    57.829904\n",
+       "3    67.927146\n",
+       "4    64.940464\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 28
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:58:11.070832Z",
+     "start_time": "2025-11-18T12:58:11.059693Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "q1, q3 = s.quantile([0.25, 0.75])",
+   "id": "493386f5793f9e90",
+   "outputs": [],
+   "execution_count": 29
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:58:18.463095Z",
+     "start_time": "2025-11-18T12:58:18.458330Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "q1",
+   "id": "56b76777371611aa",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.84914654236232"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T12:58:29.164815Z",
+     "start_time": "2025-11-18T12:58:29.145671Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "q3",
+   "id": "5a1ce30608d5c50c",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.896618823359205"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 32
   }
  ],
  "metadata": {
